--- a/Landing and Home Page/pages/index.html
+++ b/Landing and Home Page/pages/index.html
@@ -25,6 +25,7 @@
             <button class="tab-btn active" data-tab="schedule">Work Schedule</button>
             <button class="tab-btn" data-tab="create-user">Create Users</button>
             <button class="tab-btn" data-tab="view-users">View Users</button>
+            <button class="tab-btn" data-tab="create-patient">Create Patient</button>
         </div>
 
         <!-- Schedule Tab -->
@@ -136,6 +137,52 @@
                 </form>
             </div>
         </div>
+
+        <!-- Create Patient Section -->
+        <div id="tab-create-patient" class="tab-section" style="display: none;">
+            <h1>Create Patient Record</h1>
+
+            <form class="create-patient-form">
+                <div class="input-group">
+                    <label for="new-username">Name</label>
+                    <input type="text" id="patient-name" placeholder="Enter name" required>
+                </div>
+
+                <div class="input-group">
+                    <label for="new-contact">Contact Number</label>
+                    <input type="text" id="patient-contact" placeholder="Enter contact number" required>
+                </div>
+
+                <div class="input-group">
+                    <label for="new-address">Address</label>
+                    <input type="text" id="patient-address" placeholder="Enter address" required>
+                </div>
+
+                <div class="input-group">
+                    <label for="new-medical-history">Medical History</label>
+                    <input type="text" id="patient-medical-history" placeholder="Enter medical history" required>
+                </div>
+
+
+                <button type="submit" class="action-btn">Create Patient</button>
+            </form>
+            <h1>All Patients</h1>
+                <table class="patient-table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Contact</th>
+                            <th>Address</th>
+                            <th>Medical History</th>
+                        </tr>
+                    </thead>
+                    <tbody id="patient-list">
+                        <!-- Filled dynamically -->
+                    </tbody>
+                </table>
+        </div>
+
+        
 
         <!-- Logout Confirmation Modal -->
         <div id="logout-modal" class="modal">
@@ -264,6 +311,42 @@
                 showPopup("Server error: " + err.message, "error");
             }
         }
+
+        // CREATE PATIENT FORM
+        const createPatientForm = document.querySelector(".create-patient-form");
+
+        createPatientForm.addEventListener("submit", async (e) => {
+            e.preventDefault();
+
+            const name = document.getElementById("patient-name").value.trim();
+            const contact = document.getElementById("patient-contact").value.trim();
+            const address = document.getElementById("patient-address").value.trim();
+            const medicalHistory = document.getElementById("patient-medical-history").value.trim();
+
+            if (!name || !contact || !address || !medicalHistory) {
+                showPopup("Please fill in all fields.", "error");
+                return;
+            }
+
+            try {
+                const res = await fetch("/create-patient", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ name, contact, address, medicalHistory })
+                });
+
+                const data = await res.json();
+
+                if (data.success) {
+                    showPopup("User created successfully!", "success");
+                    createPatientForm.reset();
+                } else {
+                    showPopup("Error: " + data.message, "error");
+                }
+            } catch (err) {
+                showPopup("Server error: " + err.message, "error");
+            }
+        });
 
         // Update User Modal
         const updateModal = document.getElementById("update-user-modal");
